@@ -33,12 +33,11 @@ __PACKAGE__->mk_accessors(qw/service_status_duration service_id c_service n_serv
 __PACKAGE__->mk_accessors(qw/min_smallint max_smallint min_int max_int min_bigint max_bigint/);
 __PACKAGE__->mk_accessors(qw/min_m_float max_m_float min_p_float max_p_float/);
 
-our $VERSION = "0.13";
+our $VERSION = "0.14";
 
 sub run {
     my $class = shift;
-    my $opts = Bloonix::Server::Validate->argv(@_);
-    my $self = bless $opts, $class;
+
 
     $self->init;
     $self->fcgi(Bloonix::FCGI->new($self->config->{proc_manager}));
