@@ -1,3 +1,7 @@
+bloonix-server (0.14) released at 2015-01-13
+
+    * Kicked dependency postfix.
+
 bloonix-server (0.13) released at 2015-01-02
 
     * Fixed volatile handling if max attempt is higher than 1.
